# elastic-stream

./: .gitignore  .golangci.yaml  .pre-commit-config.yaml  Cargo.toml  Cross.toml  LICENSE.txt  Makefile  README.md  codecov.yml  go.mod  go.sum  rust-toolchain.toml  vercel.json
components/alloc/: Cargo.toml
components/alloc/src/: lib.rs  trace.rs
components/cache/: Cargo.toml
components/cache/benches/: benchmark.rs
components/cache/src/: lib.rs
components/client/: Cargo.toml
components/client/src/: client.rs  composite_session.rs  error.rs  heartbeat.rs  id_generator.rs  invocation_context.rs  lb_policy.rs  lib.rs  naming.rs  node_state.rs  request.rs  response.rs  role.rs  session.rs  session_manager.rs  session_state.rs
components/codec/: Cargo.toml
components/codec/src/: error.rs  frame.rs  lib.rs
components/config/: Cargo.toml
components/config/src/: error.rs  lib.rs
components/mock-server/: Cargo.toml
components/mock-server/src/: lib.rs
components/model/: Cargo.toml
components/model/src/: append_entry.rs  append_result_entry.rs  batch.rs  client_role.rs  data_node.rs  error.rs  fetch.rs  flat_record.rs  header.rs  lib.rs  list_range_criteria.rs  object.rs  payload.rs  placement_driver_node.rs  placement_manager_node.rs  range_criteria.rs  range_server.rs  record.rs  replica.rs  resource.rs  status.rs
components/object-storage/: Cargo.toml
components/object-storage/examples/: object_storage.rs
components/object-storage/src/: lib.rs  object_manager.rs  object_storage.rs  range_accumulator.rs  range_fetcher.rs  range_offload.rs
components/observation/: Cargo.toml
components/observation/src/: lib.rs
components/pd-client/: Cargo.toml
components/pd-client/src/: lib.rs  pd_client.rs
components/placement-client/: Cargo.toml  build.rs
components/placement-client/fbs/: rpc.fbs
components/placement-client/src/: error.rs  lib.rs  notifier.rs
components/polling/: Cargo.toml
components/polling/src/: client_call.rs  lib.rs  polling_service.rs  stream_observer.rs
components/protocol/: Cargo.toml  README.md  build.rs
components/protocol/fbs/: header.fbs  model.fbs  rpc.fbs
components/protocol/src/: lib.rs
components/replication/: Cargo.toml  README.md
components/replication/src/: error.rs  lib.rs  request.rs  stream_client.rs  stream_manager.rs
components/store/: Cargo.toml
components/store/src/: cursor.rs  elastic.rs  io.rs  lib.rs  offset_manager.rs  option.rs  request.rs  segment.rs  store.rs
components/test-util/: Cargo.toml
components/test-util/examples/: echo-server.rs  test-server.rs  test-tracing.rs
components/test-util/src/: lib.rs
components/tiered-storage/: Cargo.toml
components/tiered-storage/examples/: tiered_storage.rs
components/tiered-storage/src/: lib.rs  object_manager.rs  object_storage.rs  range_accumulator.rs  range_fetcher.rs  range_offload.rs
components/tool/: Cargo.toml
components/tool/examples/: dio.rs
components/tool/src/: args.rs  lib.rs
components/transport/: Cargo.toml
components/transport/src/: channel.rs  channel_state.rs  connection.rs  connection_state.rs  error.rs  lib.rs  sync.rs  write_task.rs
components/ulog/: Cargo.toml  README.md
components/ulog/src/: lib.rs
components/util/: Cargo.toml
components/util/examples/: echo-server.rs
components/util/src/: bytes.rs  crc32.rs  handle_joiner.rs  lib.rs
data-node/: Cargo.toml  build.rs
data-node/examples/: ping_pong.rs  publish.rs  stress.rs
data-node/fbs/: header.fbs
data-node/src/: cfg.rs  cli.rs  connection.rs  connection_tracker.rs  delegate_task.rs  error.rs  frame.rs  lib.rs  main.rs  node.rs  node_config.rs  profiling.rs  server.rs  session.rs  worker.rs
data-node/src/cfg/: mod.rs  server_config.rs
data-node/src/channel_handler/: idle.rs
data-node/src/connection_handler/: idle.rs  mod.rs
data-node/src/handler/: append.rs  cmd.rs  create_range.rs  describe_range.rs  fetch.rs  heartbeat.rs  mod.rs  ping.rs  seal_range.rs
data-node/src/stream_manager/: append_window.rs  fetcher.rs  manager.rs  mod.rs  range.rs  stream.rs  stream_manager.rs  window.rs
data-node/src/workspace/: append_window.rs  mod.rs
front-end-sdk/: Cargo.toml  README.md
front-end-sdk/examples/: consumer.rs  producer.rs  reader.rs  writer.rs
front-end-sdk/src/: lib.rs
front-end-sdk/src/consumer/: mod.rs
front-end-sdk/src/producer/: mod.rs
front-end-sdk/src/reader/: mod.rs
front-end-sdk/src/writer/: mod.rs
placement-manager/: .gitignore  Cargo.toml  Makefile  README.md  codecov.yml  go.mod
placement-manager/.github/workflows/: ci-crossbuild.yaml  ci-lint.yaml  ci-tests.yaml  ci.yaml
placement-manager/api/rpcfb/: rpc.fbs
placement-manager/cmd/placement-manager/: main.go
placement-manager/conf/: config.toml  config.yaml
placement-manager/distribution/cloud/: pm.yaml
placement-manager/pkg/server/: grpc.go  server.go
placement-manager/src/: main.rs
placement-manager/tool/: go.mod  go.sum
range-server/: Cargo.toml
range-server/src/: cli.rs  connection_tracker.rs  error.rs  heartbeat.rs  lib.rs  main.rs  metrics.rs  profiling.rs  server.rs  session.rs  worker.rs  worker_config.rs
range-server/src/connection_handler/: idle.rs
range-server/src/handler/: append.rs  cmd.rs  create_range.rs  fetch.rs  heartbeat.rs  mod.rs  ping.rs  seal_range.rs
range-server/src/metadata/: manager.rs  mod.rs  watcher.rs
range-server/src/range_manager/: fetcher.rs  manager.rs  mod.rs  range.rs  stream.rs  window.rs
range-server/src/stream_manager/: fetcher.rs  manager.rs  mod.rs  range.rs  stream.rs
sdks/frontend-rs/: Cargo.toml  README.md
sdks/frontend-rs/benches/: sample_benchmark.rs
sdks/frontend-rs/examples/: append.rs  concurrent_append.rs  main.rs  stress.rs
sdks/frontend-rs/src/: error.rs  frontend.rs  lib.rs  log.rs  stream.rs  stream_options.rs  time_format.rs
sdks/rust/: Cargo.toml  README.md
sdks/rust/examples/: main.rs  reader.rs  writer.rs
sdks/rust/src/: append_result.rs  channel_reader.rs  channel_writer.rs  client.rs  client_error.rs  command.rs  error.rs  frontend.rs  io.rs  lib.rs  (+7 more)
(+1313 files in other folders)
