[workspace]
# See https://github.com/rust-lang/rfcs/blob/master/text/2957-cargo-features2.md
# Without resolver = 2, using `cargo build --features x` to build `cmd`
# will _not_ propagate the feature `x` into `cmd`'s direct dependencies.
resolver = "2"
members = [
    "components/codec",
    "components/model",
    "components/protocol",
    "components/client",
    "components/transport",
    "components/store",
    "components/util",
    "components/test-util",
    "data-node",
    "sdks/rust"
]

[workspace.dependencies]
async-channel = "1.8.0"
byteorder = "1"
bytes = "1"
cfg-if = "1.0.0"
chrono = "0.4"
ctrlc = "3.2.5"
core_affinity = "0.8"
crc = "3.0"
crc32fast = "1.3"
derivative = "2.2"
futures = { version = "0.3" }
itertools = {version = "0.10.5" }
lazy_static = "1.4.0"
io-uring = "0.5"
tokio-uring = { git = "https://github.com/tokio-rs/tokio-uring.git", branch = "master", features = ["bytes"] }
tokio = { version = "1", features = ["sync", "time", "macros"] }
tokio-util = "0.7"
crossbeam = "0.8"
num_cpus = "1"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
num_enum = "0.5"

flatbuffers = { git = "https://github.com/google/flatbuffers.git", tag = "v23.3.3" }

libc = "0.2"
nix = "0.26"

# Logging
slog = { version = "2.7", features = ["max_level_trace", "release_max_level_warn"] }
slog-async = "2.7"
slog-term = "2.9"

# RocksDB
rocksdb = { version = "0.20", default-features = false, features = ["jemalloc"] }

pprof = { version = "0.11", features = ["flamegraph"] }


rand = { version = "0.8" }
uuid = { version = "1.3", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
mockall = "0.11"
cargo-llvm-cov = "0.5"

flatc-rust = { version = "0.2" }

gethostname = "0.4"

ordinal = "0.3"

criterion = "0.4"

minitrace = "0.4"
prometheus = "0.13"