[workspace]
# See https://github.com/rust-lang/rfcs/blob/master/text/2957-cargo-features2.md
# Without resolver = 2, using `cargo build --features x` to build `cmd`
# will _not_ propagate the feature `x` into `cmd`'s direct dependencies.
resolver = "2"
members = [
    "components/client",
    "components/codec",
    "components/config",
    "components/mock-server",
    "components/model",
    "components/object-storage",
    "components/observation",
    "components/pd-client",
    "components/polling",
    "components/protocol",
    "components/replication",
    "components/store",
    "components/tool",
    "components/transport",
    "components/ulog",
    "components/util",
    "range-server",
    "sdks/frontend-rs",
]

[workspace.package]
version = "0.2.7"
authors = [
    "Li Zhanhui <lizhanhui@gmail.com>",
    "Ning Yu <chillax65536@gmail.com>",
    "Han Xu",
    "Daniel",
    "Ping'an Tian",
    "Curtis Wan",
]
description = "A Cloud-Native Distributed Storage System For Messaging and Streaming"
license = "SSPL"

[workspace.dependencies]
anyhow = "1.0"
async-channel = "1.8.0"
built = "0.6"
byteorder = "1"
bytes = "1"
cfg-if = "1.0.0"
chrono = "0.4"
ctrlc = "3.2.5"
core_affinity = "0.8"
crc = "3.0"
crc32fast = { version = "1.3", features = ["nightly"] }
derivative = "2.2"
futures = { version = "0.3" }
itertools = { version = "0.11" }
lazy_static = "1.4"
io-uring = "0.5"
tokio-uring = { git = "https://github.com/tokio-rs/tokio-uring.git", branch = "master", features = [
    "bytes",
] }
tokio = { version = "1", features = ["sync", "time", "macros"] }
tokio-util = "0.7"
crossbeam = "0.8"
num_cpus = "1"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive", "env"] }
num_enum = "0.6"

flatbuffers = { git = "https://github.com/google/flatbuffers.git", tag = "v23.3.3" }

libc = "0.2"
nix = "0.26"
opendal = "0.38.0"

# Logging
log = { version = "0.4", features = [
    "max_level_trace",
    "release_max_level_info",
] }
env_logger = "0.10"
log4rs = "1.2"

# Tracing
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"

# RocksDB
rocksdb = { git = "https://github.com/AutoMQ/rust-rocksdb.git", branch = "develop", default-features = false, features = [
    "jemalloc",
] }

pprof = { version = "0.12", features = ["flamegraph"] }

rand = { version = "0.8" }
uuid = { version = "1.3", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
mockall = "0.11"
cargo-llvm-cov = "0.5"

flatc-rust = { version = "0.2" }

gethostname = "0.4"

ordinal = "0.3"

criterion = "0.5"

minstant = "0.1"
minitrace = "0.4"
prometheus = "0.13"

serde = "1.0"
serde_yaml = "0.9"
envy = "0.4"

local-sync = "0.1"

tempfile = "3"

lru = "0.11.0"

hdrhistogram = "7.5.2"

[profile.dev]
panic = "unwind"

[profile.release]
opt-level = 2
debug = false
strip = "none"
debug-assertions = false
codegen-units = 1
overflow-checks = true
lto = true
incremental = false
panic = "abort"

[profile.perf]
inherits = "release"
opt-level = 2
debug = true
strip = "none"
debug-assertions = false
overflow-checks = false
codegen-units = 1
lto = true
incremental = false
panic = "unwind"
