[package]
name = "data-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder =  { workspace = true }
bytes =  { workspace = true }
core_affinity =  { workspace = true }
crc =  { workspace = true }
num_cpus =  { workspace = true }
thiserror =  { workspace = true }
clap = { workspace = true }
flatbuffers = { workspace = true }
num_enum =  { workspace = true }
pprof = { workspace = true }
slog =  { workspace = true }
slog-async =  { workspace = true }
slog-term =  { workspace = true }
codec = { path = "../components/codec" }
protocol = {path = "../components/protocol" }
transport = { path = "../components/transport" }
store = { path = "../components/store" }
placement-client = { path = "../components/placement-client" }
io-uring = { workspace = true }
tokio-uring = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
chrono = "0.4.23"