[package]
name = "data-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
byteorder =  { workspace = true }
bytes =  { workspace = true }
cfg-if = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
client = { path = "../components/client" }
config = { path = "../components/config" }
codec = { path = "../components/codec" }
core_affinity =  { workspace = true }
crc =  { workspace = true }
crossbeam = { workspace = true }
ctrlc = { workspace = true }
futures = { workspace = true }
num_cpus =  { workspace = true }
flatbuffers = { workspace = true }
io-uring = { workspace = true }
model = { path = "../components/model" }
num_enum =  { workspace = true }
minstant = { workspace = true }
pprof = { workspace = true }
protocol = {path = "../components/protocol" }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
log =  { workspace = true }
log4rs = { workspace = true }
store = { path = "../components/store" }
transport = { path = "../components/transport" }
thiserror =  { workspace = true }
tokio-uring = { workspace = true }
tokio = { workspace = true }
util = {path = "../components/util"}
lazy_static = {version = "1.4.0"}
prometheus = {workspace = true}

[dev-dependencies]
mockall = { workspace = true }
test-util = { path = "../components/test-util" }

[features]
paranoid = []