[package]
name = "placement-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Command Line Argumeng Parser
clap =  { workspace = true }
codec = { path = "../components/codec" }

# Logging
slog =  { workspace = true }
slog-async =  { workspace = true }
slog-term =  { workspace = true }

thiserror =  { workspace = true }
tokio = { workspace = true }

num_cpus = { workspace = true }
byteorder = { workspace = true }