[package]
name = "range-server"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
license = { workspace = true }
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
built = { workspace = true, features = ["chrono", "semver"] }
byteorder = { workspace = true }
bytes = { workspace = true }
cfg-if = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
client = { path = "../components/client" }
codec = { path = "../components/codec" }
config = { path = "../components/config" }
core_affinity = { workspace = true }
crc = { workspace = true }
crossbeam = { workspace = true }
ctrlc = { workspace = true }
flatbuffers = { workspace = true }
futures = { workspace = true }
io-uring = { workspace = true }
lazy_static = { version = "1.4.0" }
log = { workspace = true }
log4rs = { workspace = true }
minstant = { workspace = true }
model = { path = "../components/model" }
num_cpus = { workspace = true }
num_enum = { workspace = true }
object-storage = { path = "../components/object-storage" }
observation = { path = "../components/observation" }
polling = { path = "../components/polling" }
pprof = { workspace = true }
prometheus = { workspace = true }
protocol = { path = "../components/protocol" }
replication = { path = "../components/replication" }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
store = { path = "../components/store" }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-uring = { workspace = true }
transport = { path = "../components/transport" }
util = { path = "../components/util" }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"

[dev-dependencies]
mock-server = { path = "../components/mock-server" }
mockall = { workspace = true }
store = { path = "../components/store", features = ["mock"] }

[build-dependencies]
built = { workspace = true, features = ["git2", "chrono", "semver"] }

[features]
paranoid = []
