[package]
name = "cache"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
license = { workspace = true }
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lru = { workspace = true }
percentage = { version = "0.1.0" }

[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true }

[features]
default = []

[[bench]]
name = "benchmark"
harness = false
