[package]
name = "cache"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
license = { workspace = true }
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { workspace = true }
lru = { workspace = true }
percentage = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true }

[features]
default = []

[[bench]]
name = "benchmark"
harness = false
