[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = { workspace = true }
codec = { path = "../codec" }
config = { path = "../config" }
itertools = { workspace = true }
model = { path = "../model" }
protocol = { path = "../protocol" }
transport = { path = "../transport" }
bytes = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
flatbuffers = { workspace = true }
gethostname = { workspace = true }
ordinal = { workspace = true }
tokio-uring = { workspace = true }
tokio = { workspace = true }
crossbeam = { workspace = true }
observation = {path = "../observation"}

[dev-dependencies]
mockall = { workspace = true }
util = { path = "../util" }
test-util = { path = "../test-util" }
cargo-llvm-cov = { workspace = true }