[package]
name = "client"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
license = { workspace = true }
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = { workspace = true }
bytes = { workspace = true }
codec = { path = "../codec" }
config = { path = "../config" }
crossbeam = { workspace = true }
flatbuffers = { workspace = true }
futures = { workspace = true }
gethostname = { workspace = true }
itertools = { workspace = true }
local-sync = { workspace = true }
log = { workspace = true }
mockall = { workspace = true, optional = true }
model = { path = "../model" }
observation = { path = "../observation" }
ordinal = { workspace = true }
protocol = { path = "../protocol" }
thiserror = { workspace = true }
monoio = { workspace = true }
transport = { path = "../transport" }

[dev-dependencies]
cargo-llvm-cov = { workspace = true }
chrono = { workspace = true }
env_logger = { workspace = true }
mock-server = { path = "../mock-server" }
mockall = { workspace = true }
tempfile = { workspace = true }
ulog = { path = "../ulog", features = ["env"] }
util = { path = "../util" }

[features]
default = []
mock = ["mockall"]
