[package]
name = "codec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder =  { workspace = true }
bytes =  { workspace = true }
crc =  { workspace = true }
num_enum =  { workspace = true }
thiserror =  { workspace = true }
slog = { workspace = true }
slog-async =  { workspace = true }
slog-term =  { workspace = true }