[package]
name = "codec"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
license = { workspace = true }
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = { workspace = true }
bytes = { workspace = true }
log = { workspace = true }
num_enum = { workspace = true }
protocol = { path = "../protocol" }
thiserror = { workspace = true }
util = { path = "../util" }

[dev-dependencies]
cargo-llvm-cov = { workspace = true }
