[package]
name = "config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
num_cpus = { workspace = true }
thiserror = { workspace = true }
nix = { workspace = true }
gethostname = { workspace = true }
lazy_static = { workspace = true }
model = { path = "../model" }