[package]
name = "config"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
license = { workspace = true }
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gethostname = { workspace = true }
lazy_static = { workspace = true }
libc = { workspace = true }
model = { path = "../model" }
nix = { workspace = true }
num_cpus = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
