[package]
name = "mock-server"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
license = { workspace = true }
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { workspace = true }
codec = { path = "../codec" }
flatbuffers = { workspace = true }
log = { workspace = true }
model = { path = "../model" }
protocol = { path = "../protocol" }
monoio = { workspace = true }
transport = { path = "../transport" }
