[package]
name = "model"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
license = { workspace = true }
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { workspace = true }
chrono = { workspace = true }
codec = { path = "../codec" }
derivative = { workspace = true }
flatbuffers = { workspace = true }
log = { workspace = true }
protocol = { path = "../protocol" }
strum = "0.24"
strum_macros = "0.24"
thiserror = { workspace = true }
