[package]
name = "object-storage"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
license = { workspace = true }
edition = "2021"

[dependencies]
bytes = { workspace = true }
clap = { workspace = true }
client = { path = "../client" }
config = { path = "../config" }
env_logger = { workspace = true }
flatbuffers = { workspace = true }
log = { workspace = true }
mockall = { workspace = true }
model = { path = "../model" }
observation = { path = "../observation" }
opendal = { workspace = true }
pd-client = { path = "../pd-client" }
protocol = { path = "../protocol" }
store = { path = "../store" }
monoio = { workspace = true }
util = { path = "../util" }

[dev-dependencies]
pd-client = { path = "../pd-client", features = ["mock"] }
