[package]
name = "observation"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
license = { workspace = true }
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true }
config = { path = "../config" }
core_affinity = { workspace = true }
futures = { workspace = true }
gethostname = { workspace = true }
hyper = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
minitrace = { workspace = true }
minstant = { workspace = true }
once_cell = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-prometheus = { version = "0.13.0", features = ["prometheus-encoding"] }
opentelemetry-proto = { workspace = true }
parking_lot = { workspace = true }
pprof = { workspace = true, optional = true }
procfs = { workspace = true }
prometheus = { workspace = true }
pyroscope = { workspace = true, optional = true }
pyroscope_pprofrs = { workspace = true, optional = true }
sysinfo = { workspace = true }
tokio = { workspace = true }
tonic = "0.9"

[features]
metrics = []
trace = ["minitrace/enable"]
profiles = ["pyroscope", "pyroscope_pprofrs", "pprof"]


