[package]
name = "pd-client"
edition = "2021"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
license = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
