[package]
name = "placement-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { path = "../codec" }
model = { path = "../model" }
protocol = { path = "../protocol" }
transport = { path = "../transport" }
bytes = { workspace = true }
slog = { workspace = true }
thiserror = { workspace = true }
pin-project = { workspace = true }
futures = { workspace = true }
flatbuffers = { workspace = true }
gethostname = { workspace = true }
ordinal = { workspace = true }
tokio-uring = { workspace = true }
tokio = { workspace = true }
crossbeam = { workspace = true }

[dev-dependencies]
slog-async =  { workspace = true }
slog-term =  { workspace = true }
mockall = { workspace = true }
util = { path = "../util" }
test-util = { path = "../test-util" }
cargo-llvm-cov = { workspace = true }