[package]
name = "polling"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
license = { workspace = true }
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { path = "../codec" }
log = { workspace = true }
minstant = { workspace = true }
thiserror = { workspace = true }
