[package]
name = "replication"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
license = { workspace = true }
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
client = { path = "../client" }
config = { path = "../config" }
flatbuffers = { workspace = true }
itertools = { workspace = true }
local-sync = { workspace = true }
log = { workspace = true }
model = { path = "../model" }
opendal = { workspace = true }
protocol = { path = "../protocol" }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-uring = { workspace = true }
